Correcting the image width
Giving the image a max width of 100% rather than max height, which can lead to it being off screen sometimes.

--- a/src/components/newssnippet.module.css
+++ b/src/components/newssnippet.module.css
@@ -9,7 +9,7 @@
 .newsImage {
   display: block;
   margin: auto;
-  max-height: 200px;
+  max-width: 100%;
 }
 .newsSnippet{
   padding: 0.5em 0;
